Bug 225574 - Applications greyed out in file dialogs. Patch by Nathan Hamblen. r=jhpedemonte,sr=sfraser