widget/src/mac/nsFilePicker.h
@@ -111,7 +111,8 @@ protected:
                                                 NavCallBackUserData callbackUD,
                                                 NavFilterModes filterMode ) ;
                                                 
-  PRBool                 mAllFilesDisplayed;
+  PRPackedBool           mAllFilesDisplayed;
+  PRPackedBool           mApplicationsDisplayed;
   nsString               mTitle;
   PRInt16                mMode;
   nsCOMArray<nsILocalFile> mFiles;
